# hs-hic

./: .gitignore  BUILD.bazel  README.md  hic.cabal  stack.yaml
.github/docker/: Dockerfile
doc/: overview.md  paper.md
doc/engine/: inference.md  pipeline.md  solver.md
doc/guide/: debugging.md
doc/model/: lattice.md  polymorphism.md  safety.md
doc/project/: diagnostics.md
examples/: test-cb-array.c  test-func-mismatch.c  test-match-conflict.c  test-net-pack.c  test-ptr-mismatch.c  test-refined.c  test-union-conflict.c  test-void-ptr.c
src/Language/: Hic.hs
src/Language/Hic/: Ast.hs  Inference.hs  Pretty.hs
src/Language/Hic/Core/: AlgebraicSolver.hs  AstUtils.hs  CFG.hs  DataFlow.hs  Errors.hs  GraphAlgebra.hs  Pretty.hs  Scope.hs  TypeSystem.hs  Types.hs  Worklist.hs
src/Language/Hic/Inference/: Analyze.hs  Context.hs  Engine.hs  Feature.hs  Program.hs  Utils.hs
src/Language/Hic/Inference/Passes/: Iteration.hs  Raise.hs  Scoped.hs  TaggedUnion.hs  Type.hs
src/Language/Hic/Inference/Program/: Types.hs
src/Language/Hic/Refined/: Context.hs  Inference.hs  Lattice.hs  LatticeOp.hs  PathContext.hs  Pretty.hs  Registry.hs  SemanticEquality.hs  Solver.hs  State.hs  Transition.hs  Types.hs
src/Language/Hic/Refined/Inference/: Lifter.hs  Substitution.hs  Translator.hs  Types.hs  Utils.hs
src/Language/Hic/TypeSystem/Core/: Base.hs  BuiltinMap.hs  Builtins.hs  Canonicalization.hs  Constraints.hs  GraphSolver.hs  Lattice.hs  Qualification.hs  Solver.hs  Substitution.hs  Subtype.hs  Transition.hs  TypeGraph.hs
src/Language/Hic/TypeSystem/Core/Transition/: Atoms.hs  Types.hs  Variance.hs
src/Language/Hic/TypeSystem/Ordered/: ArrayUsage.hs  Base.hs  CallGraph.hs  ConstraintGeneration.hs  HotspotAnalysis.hs  Invariants.hs  Nullability.hs  Specializer.hs  Unification.hs
src/Language/Hic/TypeSystem/Standard/: Base.hs  Constraints.hs  Solver.hs
test/Language/Hic/: InferenceSpec.hs  TestUtils.hs
test/Language/Hic/Core/: AlgebraicSolverSpec.hs  DataFlowSpec.hs  ErrorMessageSpec.hs  GraphAlgebraSpec.hs  ScopeSpec.hs  TypeSystemSpec.hs
test/Language/Hic/Inference/: EngineSpec.hs
test/Language/Hic/Inference/Passes/: IterationSpec.hs  RaiseSpec.hs  ScopedSpec.hs  TaggedUnionSpec.hs
test/Language/Hic/Refined/: Arbitrary.hs  ContextSpec.hs  InferenceSpec.hs  LatticeOpSpec.hs  PathContextSpec.hs  SemanticEqualitySpec.hs  SolverSpec.hs  TransitionSpec.hs
test/Language/Hic/Refined/Inference/: LifterSpec.hs  SubstitutionSpec.hs  TranslatorSpec.hs
test/Language/Hic/TypeSystem/Core/: BaseSpec.hs  CanonicalizationSpec.hs  ConstraintsSpec.hs  GraphSolverSpec.hs  LatticeSpec.hs  QualificationSpec.hs  SolverSpec.hs  SubstitutionSpec.hs  TransitionSpec.hs  TypeGraphSpec.hs
test/Language/Hic/TypeSystem/Core/Transition/: AtomsSpec.hs  VarianceSpec.hs
test/Language/Hic/TypeSystem/Ordered/: ArrayUsageSpec.hs  BaseSpec.hs  CallGraphSpec.hs  ConstraintGenerationSpec.hs  HotspotAnalysisSpec.hs  InvariantsSpec.hs  NullabilitySpec.hs  SpecializerSpec.hs  UnificationSpec.hs
test/Language/Hic/TypeSystem/Standard/: BaseSpec.hs  ConstraintsSpec.hs  SolverSpec.hs
tools/: BUILD.bazel  hic-check.hs  run-hic-check.sh
